--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,11 @@ matrix:
   allow_failures:
     - php: hhvm-nightly
     - php: 7.0
+    - env: YII_VERSION="2.0.0"
+    - env: YII_VERSION="2.0.1"
+    - env: YII_VERSION="2.0.2"
+    - env: YII_VERSION="2.0.3"
+    - env: YII_VERSION="dev-master"
 
 # faster builds on new travis setup not using sudo
 sudo: false
@@ -36,7 +41,7 @@ cache:
 
 install:
   - travis_retry composer self-update && composer --version
-  - travis_retry composer global require "fxp/composer-asset-plugin:1.0.0"
+  - travis_retry composer global require "fxp/composer-asset-plugin:1.*"
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - travis_retry composer require yiisoft/yii2:${YII_VERSION}
   - travis_retry composer install --prefer-dist --no-interaction
